[package]
name = "ssz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
ark-ff ={ version = "0.4.2"}
ark-std = { version = "0.4.0", default-features = true, features = ["std"] }
ark-ed-on-bls12-381 = { version = "0.4.0", features = ["r1cs"] }
ark-r1cs-std = { version = "0.4.0", default-features = true, features = ["std"] }
ark-relations = { version = "0.4.0", default-features = false  }
ark-crypto-primitives = { version = "0.4.0", default-features = true, features = [ "r1cs", "crh", "merkle_tree", "snark", "commitment", "prf"] }